# COMP3608_Project_Team21

./: .gitignore  README.md  main.py  project_results_summary.csv  project_results_summary_baseline.csv  pyproject.toml  requirements.txt  train_production.py
.agent/rules/: python-ai-ml-development-expert.md
models/: Autism_Screening_fnn_weights.pt  Autism_Screening_lr_pipeline.joblib  Autism_Screening_rf.joblib  OASIS_Alzheimer_s_fnn_weights.pt  OASIS_Alzheimer_s_lr_pipeline.joblib  OASIS_Alzheimer_s_rf.joblib  Parkinson_s__Sakar__fnn_weights.pt  Parkinson_s__Sakar__lr_pipeline.joblib  Parkinson_s__Sakar__rf.joblib  thresholds.json
models/production/: Autism_Screening_fnn.joblib  Autism_Screening_fnn_weights.pt  Autism_Screening_lr.joblib  Autism_Screening_rf.joblib  OASIS_Alzheimers_fnn.joblib  OASIS_Alzheimers_fnn_weights.pt  OASIS_Alzheimers_lr.joblib  OASIS_Alzheimers_rf.joblib  Parkinsons_Sakar_fnn.joblib  Parkinsons_Sakar_fnn_weights.pt  Parkinsons_Sakar_lr.joblib  Parkinsons_Sakar_rf.joblib
src/: data_loader.py  evaluation.py  model_pytorch.py  models_sklearn.py  persistence.py  pipeline_factory.py  preprocessing.py
